--- a/css/styles.css
+++ b/css/styles.css
@@ -637,11 +637,13 @@ button {
 .footer-email:focus,
 .footer-email:hover {
   color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-tel:focus,
 .footer-tel:hover {
   color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address-link {
