--- a/css/styles.css
+++ b/css/styles.css
@@ -265,23 +265,16 @@ button {
   text-transform: uppercase;
 }
 
-/* .hero-link {
-  display: inline-block;
-  padding: 10px 32px;
-  border-radius: 4px;
-  color: var(--white-additional-color);
-  background-color: var(--accent-color);
-  font-weight: 700;
-  font-size: 16px;
-} */
-
 .hero-button {
   width: 200px;
   height: 50px;
+
   background-color: var(--accent-color);
   color: var(--white-additional-color);
+
   font-weight: 700;
   font-size: 16px;
+
   border-radius: 4px;
   cursor: pointer;
 }
@@ -473,6 +466,7 @@ button {
 .team-list {
   display: flex;
   flex-wrap: wrap;
+
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -515,7 +509,7 @@ button {
   background-color: var(--main-background-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .circle-button:hover,
@@ -570,7 +564,7 @@ button {
   color: #afb1b8;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-clients:hover,
@@ -633,17 +627,16 @@ button {
   margin-bottom: 9px;
 }
 
-
 .footer-email:focus,
-.footer-email:hover {
-  color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.footer-email:hover {
+  color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-tel:focus,
-.footer-tel:hover {
-  color: var(--accent-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.footer-tel:hover {
+  color: var(--accent-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-address-link {
@@ -662,7 +655,7 @@ button {
   margin-left: 70px;
 }
 
-.footer-sn-title {
+.footer-titles {
   margin-bottom: 20px;
 
   color: var(--white-additional-color);
@@ -694,6 +687,66 @@ button {
   margin-right: 0;
 }
 
+/* Блок с подпиской */
+
+.footer-subscribe {
+  margin-left: 93px;
+}
+
+.footer-sub-main {
+  display: flex;
+  align-items: center;
+}
+
+.footer-sub-field {
+  width: 358px;
+
+  padding: 0;
+  padding-left: 16px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+
+  background-color: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+}
+
+.footer-sub-btn {
+  display: flex;
+  align-items: center;
+
+  width: 200px;
+  height: 50px;
+  margin-left: 12px;
+  padding-left: 29px;
+
+  background-color: var(--accent-color);
+  color: #ffffff;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  cursor: pointer;
+}
+
+.footer-sub-btn svg {
+  margin-left: 10px;
+}
+
+/* Меняет цвет текста в Placeholder */
+
+.footer-sub-main input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
 /* Портфолио */
 
 .portfolio {
@@ -720,8 +773,8 @@ button {
   border-radius: 4px;
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-  box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-button:hover,
@@ -788,7 +841,6 @@ button {
 .card-overlay {
   position: absolute;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   top: 0;
   left: 0;
@@ -797,6 +849,8 @@ button {
   height: 100%;
 
   background-color: rgba(33, 150, 243, 0.9);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .card-overlay-text {
@@ -877,8 +931,10 @@ button {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
+
   opacity: 1;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: opacity 250ms ease-in;
 }
 
 .backdrop.is-hidden {
@@ -895,10 +951,10 @@ button {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 
   padding: 40px;
   width: 528px;
-  height: 581px;
   max-height: 100vh;
 
   background-color: var(--main-background-color);
@@ -909,17 +965,248 @@ button {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transition: opacity cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms ease-in;
 }
+
+/* Форма в модальном окне */
+
+.modal-header {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+}
+
+.group-fields {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+
+  text-align: start;
+}
+
+.modal-labels {
+  margin-bottom: 4px;
+  display: block;
+}
+
+.modal-label-text {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+
+  letter-spacing: 0.01em;
+
+  color: var(--text-color);
+}
+
+.group-input {
+  position: relative;
+  margin-bottom: 10px;
+}
+
+.modal-input {
+  padding: 11px 12px;
+  padding-left: 42px;
+
+  width: 448px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-icon {
+  position: absolute;
+  top: 11px;
+  left: 12px;
+
+  fill: var(--title-text-color);
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/* Убирает обводку с элементов формы в фокусе */
+
+input:active,
+input:hover,
+input:focus,
+textarea:hover,
+textarea:focus,
+textarea:active {
+  outline: 0;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--accent-color);
+}
+
+.modal-input:focus + .modal-icon,
+.modal-input:hover + .modal-icon {
+  fill: var(--accent-color);
+}
+
+/* Поле "комментарии" */
+
+textarea {
+  resize: none;
+  font-family: inherit;
+}
+
+.text-feedback {
+  padding: 12px 16px;
+}
+
+.modal-input::placeholder {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+/* Policy */
+
+.modal-agree {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin-bottom: 30px;
+
+  cursor: pointer;
+}
+
+/* Скрытый чекбокс */
+
+.modal-checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+/* Подменяем чекбокс */
+
+.modal-checked-icon {
+  position: absolute;
+  top: 4px;
+  left: 12px;
+
+  background-color: var(--accent-color);
+  opacity: 0%;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox-icon {
+  opacity: 100%;
+
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-checkbox:checked + .modal-checked-icon {
+  opacity: 100%;
+}
+
+.modal-checkbox:checked ~ .modal-checkbox-icon {
+  opacity: 0%;
+}
+
+/* Текст соглашения */
+
+.modal-agree-text {
+  margin-left: 8px;
+  text-align: center;
+
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+
+.modal-agree-link {
+  text-decoration-line: underline;
+
+  color: var(--accent-color);
+}
+
+/* Кнопка отправки формы в модальном окне */
+
+.modal-send-btn {
+  width: 200px;
+  height: 50px;
+
+  justify-content: center;
+  margin-left: auto;
+
+  background: #188ce8;
+  border-radius: 4px;
+  color: #fff;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875;
+  letter-spacing: 0.06em;
+
+  cursor: pointer;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-send-btn:hover {
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+/* Кнопка закрытия модального окна */
 
 .modal-close-button {
   position: absolute;
-  top: 14px;
-  right: 14px;
+  top: 8px;
+  right: 8px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   width: 30px;
   height: 30px;
+  cursor: pointer;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  background-color: var(--main-background-color);
+  color: var(--text-color);
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-svg {
-  background-color: #fff;
+  fill: currentColor;
+}
+
+.modal-close-button:hover,
+.modal-close-button:focus {
+  color: var(--accent-color);
 }
