--- a/css/styles.css
+++ b/css/styles.css
@@ -965,8 +965,7 @@ button {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transition: opacity 250ms ease-in;
-}
+  transition:   
 
 /* Форма в модальном окне */
 
