--- a/css/styles.css
+++ b/css/styles.css
@@ -965,7 +965,8 @@ button {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  transition:
+  transition: opacity 250ms ease-in;
+}
 
 /* Форма в модальном окне */
 
